--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("home"), root_path %></li>
         <li><%= link_to t("help"), help_path %></li>
-        <li><%= link_to t("signin"), "#" %></li>
+        <li><%= link_to t("signup"), new_user_registration_path %></li>
+        <% unless user_signed_in? %>
+          <li><%= link_to t("signin"), new_user_session_path %></li>
+        <% else %>
+          <li>
+            <%= link_to t("signout"), destroy_user_session_path,
+              method: :delete %>
+          </li>
+        <% end %>
       </ul>
     </nav>
   </div>
