--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,12 +9,25 @@
         <% unless user_signed_in? %>
           <li><%= link_to t("signin"), new_user_session_path %></li>
         <% else %>
-          <li>
-            <%= link_to t("signout"), destroy_user_session_path,
-              method: :delete %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= current_user.name %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to t("setting"),
+                  edit_user_registration_path(current_user) %>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("signout"), destroy_user_session_path,
+                  method: :delete %>
+              </li>
+            </ul>
           </li>
         <% end %>
       </ul>
     </nav>
   </div>
 </header>
+
