--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,8 @@
 <% if object.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      <%= t("the_form_contains") pluralize(object.errors.count, t("error")) %>.
+      <%= t("the_form_contains") %>
+      <%= pluralize(object.errors.count, t("error")) %>.
     </div>
     <ul>
     <% object.errors.full_messages.each do |msg| %>
