--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("home"), root_path %></li>
         <li><%= link_to t("help"), help_path %></li>
-        <li><%= link_to t("signup"), new_user_registration_path %></li>
         <% unless user_signed_in? %>
+          <li><%= link_to t("signup"), new_user_registration_path %></li>
           <li><%= link_to t("signin"), new_user_session_path %></li>
         <% else %>
+          <li>
+            <%= link_to t("contribute_questions"),
+              user_questions_path(current_user) %>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= current_user.name %> <b class="caret"></b>
