--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -15,6 +15,7 @@
           <th class="subject"><%= t "subject" %></th>
           <th class="state"><%= t "state" %></th>
           <th class="action"></th>
+          <th class="action"></th>
         </tr>
       </thead>
       <tbody>
@@ -26,3 +27,4 @@
     </table>
   </div>
 </div>
+
