--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -9,7 +9,7 @@
           <td>
             <p class="label label-<%= @question.waiting? ? "warning" :
             "success" %>">
-              <%= @question.state %>
+              <%= t "#{@question.state}" %>
             </p>
           </td>
         </tr>
