--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,42 +1,28 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <table class="table">
-      <tbody>
-        <tr>
-          <td>
-            <%= @question.content %>
-          </td>
-          <td>
-            <p class="label label-<%= @question.waiting? ? "warning" :
-            "success" %>">
-              <%= @question.state %>
-            </p>
-          </td>
-        </tr>
+    <div class="col-md-12">
+      <div class="col-md-8">
+        <strong><%= @question.content %></strong>
+      </div>
+      <div class="col-md-4">
+        <p class="label label-<%= @question.waiting? ? "warning" :
+            "success" %> pull-right">
+          <%= t "#{@question.state}" %>
+        </p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <p class="border"></p>
+    </div>
+    <div class="col-md-12">
+      <ol type="a">
         <% if @question.options.any? %>
           <% @question.options.each do |option| %>
-            <tr>
-              <td>
-                <p id="option">
-                  <%= option.content %>
-                </p>
-              </td>
-              <td>
-                <% if option.correct? %>
-                  <p class="label label-success">
-                    <%= t "correct" %>
-                  </p>
-                <% else %>
-                  <p class="label label-danger">
-                    <%= t "not_correct" %>
-                  </p>
-                <% end %>
-              </td>
-            </tr>
+            <%= render "option", option: option %>
           <% end %>
         <% end %>
-      </tbody>
-    </table>
+      </ol>
+    </div>
     <% if @question.waiting? %>
       <div class="col-md-12">
         <%= link_to user_question_path(current_user, @question),
@@ -46,7 +32,7 @@
           </span>
         <% end %>
         <%= link_to edit_user_question_path(current_user, @question) do %>
-          <span class="btn btn-warning col-md-5 pull-right">
+          <span class="btn btn-primary col-md-5 pull-right">
             <%= t "edit" %>
           </span>
         <% end %>
