--- a/app/views/admin/exams/show.html.erb
+++ b/app/views/admin/exams/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <%= form_for [:admin, @exam] do |f| %>
+      <%= f.hidden_field :state, value: :checked %>
       <%= f.fields_for :results do |result| %>
         <table class="table table-striped">
           <tbody>
