--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -8,20 +8,26 @@
         <%= t "new_question" %>
       <% end %>
     </h2>
-    <table class="table">
+    <table class="table question">
       <thead>
         <tr>
+          <th class="id"><%= t "stt" %></th>
+          <th class="user"><%= t "user" %></th>
           <th class="content"><%= t "question" %></th>
           <th class="subject"><%= t "subject" %></th>
           <th class="state"><%= t "state" %></th>
           <th class="action"></th>
-          <th class="action"></th>
+          <th class="action-active"></th>
         </tr>
       </thead>
       <tbody>
         <% if @questions.any? %>
           <%= render @questions%>
-          <%= paginate @questions %>
+          <tr>
+            <td colspan="5">
+              <%= paginate @questions %>
+            </td>
+          </tr>
         <% end %>
       </tbody>
     </table>
