--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,34 +2,12 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4><%= t("sign_up") %></h4>
+        <h3><%= t("sign_up") %></h3>
       </div>
       <div class="panel-body">
         <%= form_for(resource, :as => resource_name, url:
             registration_path(resource_name), html:{role: "form"}) do |f| %>
-          <%= render "shared/error_messages", object: f.object %>
-          <div class="form-group">
-            <%= f.label :name %>
-            <%= f.text_field :name, autofocus: true, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :chat_word %>
-            <%= f.text_field :chat_word, autofocus: true,
-              class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :email %>
-            <%= f.email_field :email, autofocus: true, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :password %><br />
-            <%= f.password_field :password, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation,
-              class: "form-control" %>
-          </div>
+          <%= render "registration_form", f: f %>
           <%= f.submit t("sign_up"), class: "btn btn-primary col-md-12" %>
         <% end %>
       </div>
