--- a/app/views/exams/_exam_info.html.erb
+++ b/app/views/exams/_exam_info.html.erb
@@ -1,19 +1,19 @@
 <td class="content">
-  <%= exam.created_at %>
+  <%= exam.created_at.strftime("%d-%m-%y %H:%M:%S %p") %>
 </td>
 <td class="subject">
   <%= exam.category.name %>
 </td>
-<td class="state">
+<td class="state center">
   <%= exam.state %>
 </td>
-<td class="state">
+<td class="state center">
   <%= exam.category.time_limit %>
 </td>
-<td class="state">
+<td class="state center">
   <%= exam.results.count %>
 </td>
-<td class="time">
+<td class="time center">
   <%= exam.time_end.nil? ? Settings.time_default :
     Time.at((exam.time_end - exam.time_start) < exam.category.time_limit * 60 ? (exam.time_end - exam.time_start) : exam.category.time_limit * 60)
       .utc.strftime("%H:%M:%S") %>
