--- a/app/views/exams/_form_exam.html.erb
+++ b/app/views/exams/_form_exam.html.erb
@@ -5,7 +5,7 @@
         class: "form-control" %>
     </div>
     <div class="col-md-3">
-      <%= f.submit t("create_exam"), class: "btn" %>
+      <%= f.submit t("create_exam"), class: "btn btn-primary" %>
     </div>
   <% end -%>
 </div>
