--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,12 +1,13 @@
 <div class="row">
   <div class="col-md-12">
-    <%= render "form_exam" %>
+    <%= render "form_exam" if @categories.any? %>
+  </div>
+  <hr>
+  <div class="col-md-12">
+    <h3><b><%=  t "examination_list" %></b></h3>
   </div>
   <div class="col-md-12">
-    <%=  t "examination_list" %>
-  </div>
-  <div class="col-md-12">
-    <table class="table">
+    <table class="table exams">
       <thead>
         <tr>
           <th class="content"><%= t "create_date" %></th>
@@ -21,6 +22,11 @@
       </thead>
       <tbody>
         <%= render @exams if @exams.any? %>
+        <tr>
+          <td colspan="8">
+            <%= paginate @exams %>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
