--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,25 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("home"), root_path %></li>
         <li><%= link_to t("help"), help_path %></li>
+        <% if can? :manage, Category %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t "manage" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to t("categories"),
+                  admin_categories_path %>
+              </li>
+              <li>
+                <%= link_to t("questions"), admin_questions_path %>
+              </li>
+              <li class="none-border-botom">
+                <%= link_to t("exams"), admin_exams_path %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
         <% unless user_signed_in? %>
           <li><%= link_to t("signup"), new_user_registration_path %></li>
           <li><%= link_to t("signin"), new_user_session_path %></li>
@@ -18,12 +37,12 @@
               <%= current_user.name %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li>
+              <li class="none-border-botom">
                 <%= link_to t("setting"),
                   edit_user_registration_path(current_user) %>
               </li>
               <li class="divider"></li>
-              <li>
+              <li class="none-border-botom">
                 <%= link_to t("signout"), destroy_user_session_path,
                   method: :delete %>
               </li>
@@ -34,4 +53,3 @@
     </nav>
   </div>
 </header>
-
