--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,27 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div id="error_explanation" class="field_with_errors">
-            <% flash.each do |message_type, message| %>
-              <div class="alert alert-warning"><%= message %></div>
-            <% end %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-12">
+          <%= render "layouts/header" %>
+        </div>
+        <div class="col-md-12">
+          <div class="container">
+            <div class="row" id="notification">
+              <div class="col-md-12">
+                <div id="error_explanation" class="field_with_errors">
+                  <% flash.each do |message_type, message| %>
+                    <div class="alert alert-<%= message_type %>"
+                      id="content-error"><%= message %></div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+            <%= yield %>
           </div>
         </div>
       </div>
-      <%= yield %>
     </div>
   </body>
 </html>
