--- a/app/views/questions/_question_form.html.erb
+++ b/app/views/questions/_question_form.html.erb
@@ -1,14 +1,14 @@
 <%= render "shared/error_messages", object: f.object %>
 <%= f.hidden_field :user_id, value: current_user.id %>
-<%= f.select(:category_id, options_from_collection_for_select(@categories,
-:id, :name), class: "form-control") %>
+<%= f.collection_select :category_id, @categories, :id, :name, {},
+        class: "form-control" %>
 <%= f.label :content %>
 <%= f.text_area :content, class: "form-control" %>
-<div class="col-md-12">
+<div class="col-md-12" id="options">
   <%= f.fields_for :options do |option| %>
     <%= render "option_fields", f: option %>
   <% end %>
-</div>
-<div class="col-md-12">
-  <%= link_to_add_fields(t("add_answer"), f, :options) %>
+  <div class="col-md-12">
+    <%= link_to_add_fields(t("add_answer"), f, :options) %>
+  </div>
 </div>
