--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,20 +8,24 @@
         <%= t "new_question" %>
       <% end %>
     </h2>
-    <table class="table">
+    <table class="table question">
       <thead>
         <tr>
+          <th class="id"><%= t "stt" %></th>
           <th class="content"><%= t "question" %></th>
           <th class="subject"><%= t "subject" %></th>
           <th class="state"><%= t "state" %></th>
           <th class="action"></th>
+          <th class="action-active"></th>
         </tr>
       </thead>
       <tbody>
-        <% if @questions.any? %>
-          <%= render @questions%>
-          <%= paginate @questions %>
-        <% end %>
+        <%= render @questions if @questions.any? %>
+        <tr>
+            <td colspan="5">
+              <%= paginate @questions %>
+            </td>
+          </tr>
       </tbody>
     </table>
   </div>
