--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -18,6 +18,7 @@
       </thead>
       <tbody>
         <%= render @exams if @exams.any? %>
+        <%= paginate @categories %>
       </tbody>
     </table>
   </div>
