--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -21,6 +21,7 @@
       </thead>
       <tbody>
         <%= render @exams if @exams.any? %>
+        <%= paginate @exams %>
       </tbody>
     </table>
   </div>
