--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.alert-notice {
+  @extend .alert-success;
+}
+.alert-alert {
+  @extend .alert-warning;
+}
+
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
   -webkit-box-sizing: border-box;
@@ -110,4 +117,12 @@ p {
 
 .scope, .time {
   text-align: center;
+}
+
+li {
+  border-bottom: 1px solid $gray-lighter;
+}
+
+.border {
+  border-bottom: 1px solid blue;
 }
