--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,40 +2,13 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3><%= t("Edit #{resource_name.to_s.humanize}") %></h3>
+        <h3><%= t("edit_user") %></h3>
       </div>
       <div class="panel-body">
-
         <%=  form_for(resource, as: :resource_name,
           url: registration_path(resource_name),
           html:{method: :put}) do |f| %>
-          <%= render "shared/error_messages", object: f.object %>
-          <div class="form-group">
-            <%= f.label :name %>
-            <%= f.text_field :name, autofocus: true, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :chat_word %>
-            <%= f.text_field :chat_word, autofocus: true,
-              class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :email %>
-            <%= f.email_field :email, autofocus: true, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :password %>
-            <i>
-              (<%= t("leave_blank_if_you_don_t_want_to_change_it") %>)
-            </i><br />
-            <%= f.password_field :password,
-              autocomplete:"off", class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation,
-              class: "form-control"  %>
-          </div>
+          <%= render "registration_form", f: f %>
           <div class="form-group">
             <%= f.label :current_password %>
             <i>
