--- a/app/views/exams/_question.html.erb
+++ b/app/views/exams/_question.html.erb
@@ -1,21 +1,4 @@
-<tr>
-  <td id="vertical" class="col-md-4">
-    <p><strong><%= f.object.question.content %></strong></p>
-  </td>
-  <td id="vertical" class="col-md-8">
-    <% f.object.question.options.each do |option| %>
-      <ul class="answers">
-        <li class="col-md-12" id="vertical">
-          <label class="radio">
-            <%= f.radio_button :option_id, option.id,
-              disabled: !f.object.exam.testing? %>
-            <%= option.content %>
-          </label>
-        </li>
-      </ul>
-    <% end %>
-  </td>
-</tr>
+<%= render "question_info", f: f %>
 <% if f.object.exam.checked? %>
   <tr>
     <td colspan="2">
