--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div id="error_explanation" class="field_with_errors">
             <% flash.each do |message_type, message| %>
-              <div class="alert alert-warning"><%= message %></div>
+              <div class="alert alert-<%= message_type %>"><%= message %></div>
             <% end %>
           </div>
         </div>
