--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -126,3 +126,13 @@ li {
 .border {
   border-bottom: 1px solid blue;
 }
+
+.radio {
+  padding-left: 20px;
+}
+
+#time-down {
+  position: fixed;
+  right: 5%;
+  top: 20%;
+}
