--- a/app/views/devise/registrations/_registration_form.html.erb
+++ b/app/views/devise/registrations/_registration_form.html.erb
@@ -4,8 +4,8 @@
   <%= f.text_field :name, autofocus: true, class: "form-control" %>
 </div>
 <div class="form-group">
-  <%= f.label :chat_word %>
-  <%= f.text_field :chat_word, autofocus: true,
+  <%= f.label :chat_work %>
+  <%= f.text_field :chat_work, autofocus: true,
     class: "form-control" %>
 </div>
 <div class="form-group">
