--- a/app/views/exams/_question.html.erb
+++ b/app/views/exams/_question.html.erb
@@ -1,4 +1,4 @@
-<%= render "question_info", f: f %>
+<li><%= render "question_info", f: f %></li>
 <% if f.object.exam.checked? %>
   <tr>
     <td colspan="2">
