--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <%=  t "examination_list" %>
+    <h3><b><%=  t "examination_list" %></b></h3>
   </div>
   <div class="col-md-12">
     <table class="table">
@@ -18,7 +18,7 @@
       </thead>
       <tbody>
         <%= render @exams if @exams.any? %>
-        <%= paginate @categories %>
+        <%= paginate @exams %>
       </tbody>
     </table>
   </div>
