--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
   <div class="col-md-12">
-    <%= render "form_exam" %>
+    <%= render "form_exam" if @categories.any? %>
   </div>
+  <hr>
   <div class="col-md-12">
-    <%=  t "examination_list" %>
+    <h3><b><%=  t "examination_list" %></b></h3>
   </div>
   <div class="col-md-12">
     <table class="table">
